--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -56,6 +56,11 @@
   background-color: #f1f1f1;
 }
 
+.card h3 {
+  margin-left: 0;
+  margin-top: 1em;
+}
+
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
