--- a/public/css/form.css
+++ b/public/css/form.css
@@ -9,8 +9,12 @@ textarea {
 
 #room-preview-container {
   position: absolute;
-  height: 16em;
-  border: 1px solid red;
+  height: 64em;
   width: calc(50% - 8em);
   margin-left: calc(50% + 4em);
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
