--- a/public/css/c-namespace.css
+++ b/public/css/c-namespace.css
@@ -77,10 +77,16 @@ body {
   align-items: center;
   align-items: center;
   vertical-align: middle;
+  height: 100%;
 }
 
 .muted-video {
   filter: grayscale(0.5);
+}
+
+.video-padding {
+  width: 50vw;
+  height: 28.125vw;
 }
 
 .overlay-text {
@@ -122,6 +128,9 @@ video {
   border-color: gold;
   object-fit: cover;
   height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  aspect-ratio: 16/9;
 }
 
 ol li {
