--- a/public/css/c-namespace.css
+++ b/public/css/c-namespace.css
@@ -19,7 +19,7 @@
 }
 
 #stats-chat {
-  width: 70%;
+  width: 70vw;
   padding-left: 1em;
   float: left;
   border-style: none solid none none;
@@ -32,10 +32,10 @@
 
 #queue {
   display: block;
-  width: 25%;
+  width: 25vw;
   margin-left: 70%;
+  margin-right: 0%;
   height: auto;
-  height: 100%;
 }
 
 #queue-container {
@@ -146,13 +146,14 @@ ol {
 
 #message-form {
   width: 90%;
+  max-width: 90%;
   border: var(--main-color, #333) solid 2px;
 }
 
 #message-form input {
-  position: relative;
   width: 100%;
   height: 2em;
+  overflow-wrap: break-word;
   margin: 0;
   padding: 0;
   border: 0;
@@ -160,16 +161,25 @@ ol {
 
 #messages {
   height: 16em;
+  width: 100%;
+  max-width: 100%;
   max-height: 16em;
+  overflow-wrap: break-word;
   list-style-type: none;
   overflow-y: auto;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
+
 #messages li {
+  display: inline-block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
   padding: 5px 10px;
 }
+
 #messages li:nth-child(odd) {
   background: #eee;
 }
