Duplicate IP checking, win-streak display

--- a/public/css/c-namespace.css
+++ b/public/css/c-namespace.css
@@ -52,6 +52,12 @@
   width: 100%;
 }
 
+.winstreak {
+  margin: 0;
+  visibility: hidden;
+  color: gold;
+}
+
 body {
   transition: all 0.3s ease-in;
 }
